Fixed resumer alignment

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -81,6 +81,7 @@ html { height: 98%; }
     border: none;
     width: 800px;
     height: 1000px;
+    margin: 0 auto;
 }
 
 
@@ -92,7 +93,7 @@ html { height: 98%; }
 
 .gallary-inner {
     display: flex;
-    width: 70%;
+    width: 60%;
     flex-wrap: wrap;
     margin: 0 auto;
     justify-content: space-evenly;
